Remove some controlsfx